# saibyo

./: .coveragerc  .gitignore  .release-please-config.json  CHANGELOG.md  README.md  main.py  pyproject.toml  ruff.toml
.devcontainer/: .env.example  Dockerfile  devcontainer.cpu.json  devcontainer.gpu.json  devcontainer.json  post-create.sh  select-config.sh
.github/: pull_request_template.md
.github/workflows/: publish.yml  python-ci.yml  release-please.yml  semantic-pr.yml
docs/: cli.md  comparison-modes.md  configuration.md  installation.md  python-api.md
libs/: pyproject.toml
libs/base/conf/: app.py
libs/base/logs/: logger.py
saibyo/cli/: interpolate.py
saibyo/conf/: conf.py
saibyo/constants/: app.py
scripts/development/: ruff.sh  test.sh
src/cli/: interpolate.py  main.py
src/conf/: conf.py
src/constants/: app.py  dataset.py
src/core/: interpolator.py
src/data/: dataset.py
src/model/: base.py  rife.py
src/modules/: ifnet.py
src/saibyo/cli/: compare.py  interpolate.py  main.py
src/saibyo/conf/: conf.py
src/saibyo/constants/: app.py  conf.py
src/saibyo/core/: interpolator.py
src/saibyo/core/comparation/: comparator.py
src/saibyo/core/comparator/: comparator.py
src/saibyo/core/interpolation/: rife.py
src/saibyo/core/io/: video.py
src/saibyo/data/: dataset.py
src/saibyo/engine/comparation/: engine.py
src/saibyo/engine/interpolation/: engine.py
src/saibyo/libs/base/conf/: app.py
src/saibyo/metadata/: video.py
src/saibyo/model/: rife.py
src/saibyo/model/interpolation/: rife.py
src/saibyo/modules/: ifnet.py  warplayer.py
src/saibyo/modules/comparation/: canvas.py
src/saibyo/utils/comparation/: frame.py
tests/cli/: test_compare.py  test_integration_interpolate.py  test_interpolate.py  test_main.py
tests/conf/: test_conf.py
tests/core/: test_interpolator.py
tests/core/comparation/: test_comparator.py
tests/core/interpolation/: test_rife.py
tests/core/io/: test_video.py
tests/data/: test_dataset.py
tests/engine/comparation/: test_engine.py  test_rife.py
tests/engine/interpolation/: test_engine.py
tests/factories/: images.py
tests/metadata/: test_video.py
tests/model/: test_rife.py
tests/modules/: test_ifnet.py  test_warplayer.py
tests/modules/comparation/: test_canvas.py
tests/modules/interpolation/: test_ifnet.py
tests/utils/: test_images.py
tests/utils/comparation/: test_color.py  test_frame.py
tests/utils/interpolation/: test_audio.py  test_image.py  test_msssim.py
